--- a/package.json
+++ b/package.json
@@ -16,86 +16,87 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
-    "@angular/cdk": "^18.2.0",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/router": "^18.2.0",
-    "@apollo/client": "^3.11.4",
+    "@angular/animations": "^18.2.6",
+    "@angular/cdk": "^18.2.6",
+    "@angular/common": "^18.2.6",
+    "@angular/compiler": "^18.2.6",
+    "@angular/core": "^18.2.6",
+    "@angular/forms": "^18.2.6",
+    "@angular/platform-browser": "^18.2.6",
+    "@angular/platform-browser-dynamic": "^18.2.6",
+    "@angular/router": "^18.2.6",
+    "@apollo/client": "^3.11.8",
     "@formkit/auto-animate": "^0.8.2",
-    "@ng-icons/core": "^29.5.0",
-    "@ng-icons/heroicons": "^29.5.0",
-    "@ng-icons/iconsax": "^29.5.0",
+    "@ng-icons/core": "^29.5.1",
+    "@ng-icons/heroicons": "^29.5.1",
+    "@ng-icons/iconsax": "^29.5.1",
     "@ngrx/effects": "^18.0.2",
     "@ngrx/entity": "^18.0.2",
     "@ngrx/operators": "^18.0.2",
     "@ngrx/signals": "^18.0.2",
     "@ngrx/store": "^18.0.2",
     "@ngrx/store-devtools": "^18.0.2",
-    "apollo-angular": "^7.1.2",
+    "apollo-angular": "^7.2.0",
     "graphql": "^16.9.0",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.5.0",
     "ngx-markdown": "^18.0.0",
     "rxjs": "~7.8.1",
-    "tslib": "^2.6.3",
+    "tslib": "^2.7.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.0",
-    "@angular-devkit/core": "^18.2.0",
-    "@angular-devkit/schematics": "^18.2.0",
-    "@angular-eslint/builder": "^18.3.0",
-    "@angular-eslint/eslint-plugin": "^18.3.0",
-    "@angular-eslint/eslint-plugin-template": "^18.3.0",
-    "@angular-eslint/schematics": "^18.3.0",
-    "@angular-eslint/template-parser": "^18.3.0",
-    "@angular/cli": "^18.2.0",
-    "@angular/compiler-cli": "^18.2.0",
-    "@commitlint/cli": "^19.4.0",
-    "@commitlint/config-conventional": "^19.2.2",
+    "@angular-devkit/build-angular": "^18.2.6",
+    "@angular-devkit/core": "^18.2.6",
+    "@angular-devkit/schematics": "^18.2.6",
+    "@angular-eslint/builder": "^18.3.1",
+    "@angular-eslint/eslint-plugin": "^18.3.1",
+    "@angular-eslint/eslint-plugin-template": "^18.3.1",
+    "@angular-eslint/schematics": "^18.3.1",
+    "@angular-eslint/template-parser": "^18.3.1",
+    "@angular/cli": "^18.2.6",
+    "@angular/compiler-cli": "^18.2.6",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ngrx/schematics": "^18.0.2",
     "@parcel/watcher": "^2.4.1",
-    "@schematics/angular": "^18.2.0",
+    "@schematics/angular": "^18.2.6",
     "@swc/types": "^0.1.12",
-    "@types/google.accounts": "^0.0.14",
+    "@types/google.accounts": "^0.0.15",
     "@types/jasmine": "~5.1.4",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.16.1",
+    "@types/node": "^20.16.10",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-macros": "3.1.0",
-    "commit-and-tag-version": "^12.4.1",
-    "commitizen": "^4.3.0",
+    "commit-and-tag-version": "^12.4.4",
+    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.12.10",
-    "esbuild": "^0.23.1",
-    "eslint": "^8.57.0",
+    "esbuild": "^0.24.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^0.25.1",
     "eslint-plugin-unused-imports": "^3.2.0",
-    "jasmine-core": "~5.1.2",
+    "jasmine-core": "~5.3.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.10",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.13",
     "ts-node": "^10.9.2",
-    "typescript": "~5.4.5"
+    "typescript": "~5.4.5",
+    "zone.js": "~0.14.10"
   },
   "config": {
     "commitizen": {
