--- a/package.json
+++ b/package.json
@@ -40,9 +40,13 @@
     "graphql": "^16.9.0",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.5.0",
-    "ngx-markdown": "^18.1.0",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.8.0",
+    "unified": "^11.0.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -67,7 +71,7 @@
     "@swc/types": "^0.1.12",
     "@types/google.accounts": "^0.0.15",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.7.9",
+    "@types/node": "^22.8.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
@@ -82,7 +86,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "marked": "12.0.2",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
