--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:eslint": "ng lint",
     "format": "prettier . --write",
     "codegen": "graphql-codegen --config codegen.ts",
-    "release": "commit-and-tag-version"
+    "release": "commit-and-tag-version",
+    "cy:open": "cypress open"
   },
   "private": true,
   "dependencies": {
@@ -79,6 +80,7 @@
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.5.0",
     "commitizen": "^4.3.1",
+    "cypress": "^13.15.1",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.12.13",
     "esbuild": "^0.24.0",
