--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ngrx/store-devtools": "^18.1.1",
     "apollo-angular": "^7.2.1",
     "graphql": "^16.9.0",
+    "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.5.0",
     "rehype-sanitize": "^6.0.0",
@@ -71,6 +72,7 @@
     "@schematics/angular": "^18.2.11",
     "@swc/types": "^0.1.12",
     "@types/google.accounts": "^0.0.15",
+    "@types/gsap": "^3.0.0",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.8.5",
     "@types/uuid": "^10.0.0",
