--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ngrx/signals": "^18.1.1",
     "@ngrx/store": "^18.1.1",
     "@ngrx/store-devtools": "^18.1.1",
+    "@sentry/angular": "^8.37.1",
     "apollo-angular": "^7.2.1",
     "graphql": "^16.9.0",
     "gsap": "^3.12.5",
