--- a/package.json
+++ b/package.json
@@ -17,28 +17,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.11",
-    "@angular/cdk": "^18.2.12",
-    "@angular/common": "^18.2.11",
-    "@angular/compiler": "^18.2.11",
-    "@angular/core": "^18.2.11",
-    "@angular/forms": "^18.2.11",
-    "@angular/platform-browser": "^18.2.11",
-    "@angular/platform-browser-dynamic": "^18.2.11",
-    "@angular/router": "^18.2.11",
+    "@angular/animations": "^19.0.1",
+    "@angular/cdk": "^19.0.1",
+    "@angular/common": "^19.0.1",
+    "@angular/compiler": "^19.0.1",
+    "@angular/core": "^19.0.1",
+    "@angular/forms": "^19.0.1",
+    "@angular/platform-browser": "^19.0.1",
+    "@angular/platform-browser-dynamic": "^19.0.1",
+    "@angular/router": "^19.0.1",
     "@apollo/client": "^3.11.10",
     "@formkit/auto-animate": "^0.8.2",
-    "@ng-icons/core": "^29.9.0",
-    "@ng-icons/huge-icons": "^29.9.0",
-    "@ng-icons/iconsax": "^29.9.0",
-    "@ngrx/effects": "^18.1.1",
-    "@ngrx/entity": "^18.1.1",
-    "@ngrx/operators": "^18.1.1",
-    "@ngrx/signals": "^18.1.1",
-    "@ngrx/store": "^18.1.1",
-    "@ngrx/store-devtools": "^18.1.1",
-    "@sentry/angular": "^8.38.0",
-    "apollo-angular": "^7.2.1",
+    "@ng-icons/core": "^29.10.0",
+    "@ng-icons/huge-icons": "^29.10.0",
+    "@ng-icons/iconsax": "^29.10.0",
+    "@ngrx/effects": "19.0.0-beta.0",
+    "@ngrx/entity": "19.0.0-beta.0",
+    "@ngrx/operators": "19.0.0-beta.0",
+    "@ngrx/signals": "19.0.0-beta.0",
+    "@ngrx/store": "19.0.0-beta.0",
+    "@ngrx/store-devtools": "19.0.0-beta.0",
+    "@sentry/angular": "^8.41.0",
+    "apollo-angular": "^8.0.0",
     "graphql": "^16.9.0",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
@@ -53,51 +53,51 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.11",
-    "@angular-devkit/core": "^18.2.11",
-    "@angular-devkit/schematics": "^18.2.11",
-    "@angular-eslint/builder": "^18.4.0",
-    "@angular-eslint/eslint-plugin": "^18.4.0",
-    "@angular-eslint/eslint-plugin-template": "^18.4.0",
-    "@angular-eslint/schematics": "^18.4.0",
-    "@angular-eslint/template-parser": "^18.4.0",
-    "@angular/cli": "^18.2.11",
-    "@angular/compiler-cli": "^18.2.11",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
+    "@angular-devkit/build-angular": "^19.0.2",
+    "@angular-devkit/core": "^19.0.2",
+    "@angular-devkit/schematics": "^19.0.2",
+    "@angular-eslint/builder": "^19.0.0",
+    "@angular-eslint/eslint-plugin": "^19.0.0",
+    "@angular-eslint/eslint-plugin-template": "^19.0.0",
+    "@angular-eslint/schematics": "^19.0.0",
+    "@angular-eslint/template-parser": "^19.0.0",
+    "@angular/cli": "^19.0.2",
+    "@angular/compiler-cli": "^19.0.1",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@graphql-codegen/cli": "5.0.3",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@ngrx/schematics": "^18.1.1",
+    "@ngrx/schematics": "19.0.0-beta.0",
     "@parcel/watcher": "^2.5.0",
-    "@schematics/angular": "^18.2.11",
-    "@swc/types": "^0.1.12",
+    "@schematics/angular": "^19.0.2",
+    "@swc/types": "^0.1.17",
     "@types/google.accounts": "^0.0.15",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.10.1",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.5.0",
     "commitizen": "^4.3.1",
-    "cypress": "^13.15.2",
+    "cypress": "^13.16.0",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.12.14",
     "esbuild": "^0.24.0",
-    "eslint": "^9.14.0",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.1",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.14",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.15",
     "ts-node": "^10.9.2",
     "typescript": "~5.5.4",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "config": {
     "commitizen": {
