--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ngrx/store-devtools": "19.0.0-beta.0",
     "@sentry/angular": "^8.45.0",
     "apollo-angular": "^8.0.0",
+    "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
@@ -72,6 +73,7 @@
     "@parcel/watcher": "^2.5.0",
     "@schematics/angular": "^19.0.5",
     "@swc/types": "^0.1.17",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/google.accounts": "^0.0.15",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.10.2",
