--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ngrx/store": "19.0.0-beta.0",
     "@ngrx/store-devtools": "19.0.0-beta.0",
     "@sentry/angular": "^8.45.0",
+    "angular-oauth2-oidc": "^19.0.0",
     "apollo-angular": "^8.0.0",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
@@ -74,7 +75,6 @@
     "@schematics/angular": "^19.0.5",
     "@swc/types": "^0.1.17",
     "@types/apollo-upload-client": "^18.0.0",
-    "@types/google.accounts": "^0.0.15",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.10.2",
     "@types/uuid": "^10.0.0",
