--- a/package.json
+++ b/package.json
@@ -17,30 +17,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.4",
-    "@angular/cdk": "^19.0.3",
-    "@angular/common": "^19.0.4",
-    "@angular/compiler": "^19.0.4",
-    "@angular/core": "^19.0.4",
-    "@angular/forms": "^19.0.4",
-    "@angular/platform-browser": "^19.0.4",
-    "@angular/platform-browser-dynamic": "^19.0.4",
-    "@angular/router": "^19.0.4",
-    "@apollo/client": "^3.12.3",
+    "@angular/animations": "^19.0.5",
+    "@angular/cdk": "^19.0.4",
+    "@angular/common": "^19.0.5",
+    "@angular/compiler": "^19.0.5",
+    "@angular/core": "^19.0.5",
+    "@angular/forms": "^19.0.5",
+    "@angular/platform-browser": "^19.0.5",
+    "@angular/platform-browser-dynamic": "^19.0.5",
+    "@angular/router": "^19.0.5",
+    "@apollo/client": "^3.12.4",
     "@formkit/auto-animate": "^0.8.2",
     "@ng-icons/core": "^29.10.0",
     "@ng-icons/huge-icons": "^29.10.0",
     "@ng-icons/iconsax": "^29.10.0",
-    "@ngrx/effects": "19.0.0-beta.0",
-    "@ngrx/entity": "19.0.0-beta.0",
-    "@ngrx/operators": "19.0.0-beta.0",
-    "@ngrx/signals": "19.0.0-beta.0",
-    "@ngrx/store": "19.0.0-beta.0",
-    "@ngrx/store-devtools": "19.0.0-beta.0",
-    "@sentry/angular": "^8.45.0",
+    "@ngrx/effects": "19.0.0",
+    "@ngrx/entity": "19.0.0",
+    "@ngrx/operators": "19.0.0",
+    "@ngrx/signals": "19.0.0",
+    "@ngrx/store": "19.0.0",
+    "@ngrx/store-devtools": "19.0.0",
+    "@sentry/angular": "^8.47.0",
     "apollo-angular": "^8.0.0",
     "apollo-upload-client": "^18.0.1",
-    "graphql": "^16.9.0",
+    "graphql": "^16.10.0",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.5.0",
@@ -54,41 +54,41 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.5",
-    "@angular-devkit/core": "^19.0.5",
-    "@angular-devkit/schematics": "^19.0.5",
+    "@angular-devkit/build-angular": "^19.0.6",
+    "@angular-devkit/core": "^19.0.6",
+    "@angular-devkit/schematics": "^19.0.6",
     "@angular-eslint/builder": "^19.0.2",
     "@angular-eslint/eslint-plugin": "^19.0.2",
     "@angular-eslint/eslint-plugin-template": "^19.0.2",
     "@angular-eslint/schematics": "^19.0.2",
     "@angular-eslint/template-parser": "^19.0.2",
-    "@angular/cli": "^19.0.5",
-    "@angular/compiler-cli": "^19.0.4",
-    "@commitlint/cli": "^19.6.0",
+    "@angular/cli": "^19.0.6",
+    "@angular/compiler-cli": "^19.0.5",
+    "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@graphql-codegen/cli": "5.0.3",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@ngrx/schematics": "19.0.0-beta.0",
+    "@ngrx/schematics": "19.0.0",
     "@parcel/watcher": "^2.5.0",
-    "@schematics/angular": "^19.0.5",
+    "@schematics/angular": "^19.0.6",
     "@swc/types": "^0.1.17",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/google.accounts": "^0.0.15",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.10.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
     "autoprefixer": "^10.4.20",
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.5.0",
     "commitizen": "^4.3.1",
-    "cypress": "^13.16.1",
+    "cypress": "^13.17.0",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.12.22",
-    "esbuild": "^0.24.0",
-    "eslint": "^9.16.0",
+    "esbuild": "^0.24.2",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
@@ -96,7 +96,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3",
     "zone.js": "~0.15.0"
