--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@angular/router": "^19.0.5",
     "@apollo/client": "^3.12.4",
     "@formkit/auto-animate": "^0.8.2",
-    "@ng-icons/core": "^29.10.0",
-    "@ng-icons/huge-icons": "^29.10.0",
-    "@ng-icons/iconsax": "^29.10.0",
+    "@ng-icons/core": "^30.0.0",
+    "@ng-icons/huge-icons": "^30.0.0",
+    "@ng-icons/iconsax": "^30.0.0",
     "@ngrx/effects": "19.0.0",
     "@ngrx/entity": "19.0.0",
     "@ngrx/operators": "19.0.0",
@@ -74,19 +74,19 @@
     "@schematics/angular": "^19.0.6",
     "@swc/types": "^0.1.17",
     "@types/apollo-upload-client": "^18.0.0",
-    "@types/google.accounts": "^0.0.15",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.10.2",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
+    "angular-oauth2-oidc": "^19.0.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.5.0",
     "commitizen": "^4.3.1",
     "cypress": "^13.17.0",
     "cz-conventional-changelog": "^3.3.0",
-    "daisyui": "^4.12.22",
+    "daisyui": "^4.12.23",
     "esbuild": "^0.24.2",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
