--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@graphql-codegen/cli": "5.0.3",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@ngrx/eslint-plugin": "^19.0.0",
     "@ngrx/schematics": "19.0.0",
     "@parcel/watcher": "^2.5.0",
     "@schematics/angular": "^19.0.7",
