--- a/package.json
+++ b/package.json
@@ -59,15 +59,12 @@
     "@angular-devkit/core": "^19.0.7",
     "@angular-devkit/schematics": "^19.0.7",
     "@angular-eslint/builder": "^19.0.2",
-    "@angular-eslint/eslint-plugin": "^19.0.2",
-    "@angular-eslint/eslint-plugin-template": "^19.0.2",
-    "@angular-eslint/schematics": "^19.0.2",
-    "@angular-eslint/template-parser": "^19.0.2",
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.6",
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/js": "^9.18.0",
     "@graphql-codegen/cli": "5.0.3",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
@@ -82,6 +79,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
+    "angular-eslint": "^19.0.2",
     "angular-oauth2-oidc": "^19.0.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-macros": "3.1.0",
@@ -94,6 +92,7 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-sonarjs": "^3.0.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.5.0",
     "prettier": "^3.4.2",
