--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ngrx/store": "19.0.0",
     "@ngrx/store-devtools": "19.0.0",
     "@sentry/angular": "^8.48.0",
+    "animate.css": "^4.1.1",
     "apollo-angular": "^8.0.0",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.10.0",
