--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "src/styles.scss",
+              "node_modules/vanilla-cookieconsent/dist/cookieconsent.css"
+            ],
             "scripts": []
           },
           "configurations": {
