--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "rxjs": "~7.8.1",
     "tslib": "^2.8.1",
     "unified": "^11.0.5",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "vanilla-cookieconsent": "^3.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.2",
