--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@angular/platform-browser": "^19.1.3",
     "@angular/platform-browser-dynamic": "^19.1.3",
     "@angular/router": "^19.1.3",
-    "@apollo/client": "^3.12.7",
+    "@apollo/client": "^3.12.8",
     "@formkit/auto-animate": "^0.8.2",
     "@ng-icons/core": "^30.2.0",
     "@ng-icons/huge-icons": "^30.2.0",
@@ -38,9 +38,9 @@
     "@ngrx/signals": "19.0.0",
     "@ngrx/store": "19.0.0",
     "@ngrx/store-devtools": "19.0.0",
-    "@sentry/angular": "^8.51.0",
+    "@sentry/angular": "^8.52.0",
     "animate.css": "^4.1.1",
-    "apollo-angular": "^8.0.0",
+    "apollo-angular": "^8.0.1",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.10.0",
     "jwt-decode": "^4.0.0",
@@ -66,7 +66,7 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.19.0",
-    "@graphql-codegen/cli": "5.0.3",
+    "@graphql-codegen/cli": "^5.0.4",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@ngrx/eslint-plugin": "^19.0.0",
@@ -76,17 +76,17 @@
     "@swc/types": "^0.1.17",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.10.10",
+    "@types/node": "^22.12.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
     "angular-eslint": "^19.0.2",
     "angular-oauth2-oidc": "^19.0.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.5.0",
     "commitizen": "^4.3.1",
-    "cypress": "^14.0.0",
+    "cypress": "^14.0.1",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.12.23",
     "esbuild": "^0.24.2",
