--- a/package.json
+++ b/package.json
@@ -18,27 +18,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.3",
-    "@angular/cdk": "^19.1.1",
-    "@angular/common": "^19.1.3",
-    "@angular/compiler": "^19.1.3",
-    "@angular/core": "^19.1.3",
-    "@angular/forms": "^19.1.3",
-    "@angular/platform-browser": "^19.1.3",
-    "@angular/platform-browser-dynamic": "^19.1.3",
-    "@angular/router": "^19.1.3",
+    "@angular/animations": "^19.1.4",
+    "@angular/cdk": "^19.1.2",
+    "@angular/common": "^19.1.4",
+    "@angular/compiler": "^19.1.4",
+    "@angular/core": "^19.1.4",
+    "@angular/forms": "^19.1.4",
+    "@angular/platform-browser": "^19.1.4",
+    "@angular/platform-browser-dynamic": "^19.1.4",
+    "@angular/router": "^19.1.4",
     "@apollo/client": "^3.12.8",
     "@formkit/auto-animate": "^0.8.2",
     "@ng-icons/core": "^30.2.0",
     "@ng-icons/huge-icons": "^30.2.0",
     "@ng-icons/iconsax": "^30.2.0",
-    "@ngrx/effects": "19.0.0",
-    "@ngrx/entity": "19.0.0",
-    "@ngrx/operators": "19.0.0",
-    "@ngrx/signals": "19.0.0",
-    "@ngrx/store": "19.0.0",
-    "@ngrx/store-devtools": "19.0.0",
-    "@sentry/angular": "^8.52.0",
+    "@ngrx/effects": "^19.0.1",
+    "@ngrx/entity": "^19.0.1",
+    "@ngrx/operators": "^19.0.1",
+    "@ngrx/signals": "^19.0.1",
+    "@ngrx/store": "^19.0.1",
+    "@ngrx/store-devtools": "^19.0.1",
+    "@sentry/angular": "^8.53.0",
     "animate.css": "^4.1.1",
     "apollo-angular": "^8.0.1",
     "apollo-upload-client": "^18.0.1",
@@ -56,12 +56,12 @@
     "vanilla-cookieconsent": "^3.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.4",
-    "@angular-devkit/core": "^19.1.4",
-    "@angular-devkit/schematics": "^19.1.4",
+    "@angular-devkit/build-angular": "^19.1.5",
+    "@angular-devkit/core": "^19.1.5",
+    "@angular-devkit/schematics": "^19.1.5",
     "@angular-eslint/builder": "^19.0.2",
-    "@angular/cli": "^19.1.4",
-    "@angular/compiler-cli": "^19.1.3",
+    "@angular/cli": "^19.1.5",
+    "@angular/compiler-cli": "^19.1.4",
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
@@ -69,14 +69,14 @@
     "@graphql-codegen/cli": "^5.0.4",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@ngrx/eslint-plugin": "^19.0.0",
-    "@ngrx/schematics": "19.0.0",
+    "@ngrx/eslint-plugin": "^19.0.1",
+    "@ngrx/schematics": "^19.0.1",
     "@parcel/watcher": "^2.5.1",
-    "@schematics/angular": "^19.1.4",
+    "@schematics/angular": "^19.1.5",
     "@swc/types": "^0.1.17",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.12.0",
+    "@types/node": "^22.13.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
