--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3",
+    "typescript-eslint": "^8.24.0",
     "zone.js": "~0.15.0"
   },
   "config": {
