--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "graphql": "^16.10.0",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.5.0",
+    "ngrx-store-localstorage": "^19.0.0",
     "ngxtension": "^4.3.2",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
