--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.2",
+    "eslint-plugin-unicorn": "^57.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.5.2",
     "prettier": "^3.5.1",
