--- a/package.json
+++ b/package.json
@@ -18,39 +18,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.2",
-    "@angular/cdk": "^19.2.3",
-    "@angular/common": "^19.2.2",
-    "@angular/compiler": "^19.2.2",
-    "@angular/core": "^19.2.2",
-    "@angular/forms": "^19.2.2",
-    "@angular/platform-browser": "^19.2.2",
-    "@angular/platform-browser-dynamic": "^19.2.2",
-    "@angular/router": "^19.2.2",
-    "@apollo/client": "^3.13.4",
+    "@angular/animations": "^19.2.5",
+    "@angular/cdk": "^19.2.8",
+    "@angular/common": "^19.2.5",
+    "@angular/compiler": "^19.2.5",
+    "@angular/core": "^19.2.5",
+    "@angular/forms": "^19.2.5",
+    "@angular/platform-browser": "^19.2.5",
+    "@angular/platform-browser-dynamic": "^19.2.5",
+    "@angular/router": "^19.2.5",
+    "@apollo/client": "^3.13.6",
     "@formkit/auto-animate": "^0.8.2",
     "@ng-icons/core": "^31.2.0",
     "@ng-icons/huge-icons": "^31.2.0",
     "@ng-icons/iconsax": "^31.2.0",
-    "@ngrx/effects": "^19.0.1",
-    "@ngrx/entity": "^19.0.1",
-    "@ngrx/operators": "^19.0.1",
-    "@ngrx/signals": "^19.0.1",
-    "@ngrx/store": "^19.0.1",
-    "@ngrx/store-devtools": "^19.0.1",
-    "@sentry/angular": "^9.5.0",
+    "@ngrx/effects": "^19.1.0",
+    "@ngrx/entity": "^19.1.0",
+    "@ngrx/operators": "^19.1.0",
+    "@ngrx/signals": "^19.1.0",
+    "@ngrx/store": "^19.1.0",
+    "@ngrx/store-devtools": "^19.1.0",
+    "@sentry/angular": "^9.11.0",
+    "@tailwindcss/postcss": "^4.1.3",
     "animate.css": "^4.1.1",
     "apollo-angular": "^10.0.3",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.10.0",
     "jwt-decode": "^4.0.0",
-    "luxon": "^3.5.0",
+    "luxon": "^3.6.1",
     "ngrx-store-localstorage": "^19.0.0",
     "ngxtension": "^4.5.0",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.1",
+    "remark-rehype": "^11.1.2",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "unified": "^11.0.5",
@@ -58,41 +59,41 @@
     "vanilla-cookieconsent": "^3.1.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.3",
-    "@angular-devkit/core": "^19.2.3",
-    "@angular-devkit/schematics": "^19.2.3",
-    "@angular-eslint/builder": "^19.2.1",
-    "@angular/cli": "^19.2.3",
-    "@angular/compiler-cli": "^19.2.2",
+    "@angular-devkit/build-angular": "^19.2.6",
+    "@angular-devkit/core": "^19.2.6",
+    "@angular-devkit/schematics": "^19.2.6",
+    "@angular-eslint/builder": "^19.3.0",
+    "@angular/cli": "^19.2.6",
+    "@angular/compiler-cli": "^19.2.5",
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@eslint/js": "^9.22.0",
+    "@eslint/js": "^9.24.0",
     "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@ngrx/eslint-plugin": "^19.0.1",
-    "@ngrx/schematics": "^19.0.1",
+    "@ngrx/eslint-plugin": "^19.1.0",
+    "@ngrx/schematics": "^19.1.0",
     "@parcel/watcher": "^2.5.1",
-    "@schematics/angular": "^19.2.3",
-    "@swc/types": "^0.1.19",
+    "@schematics/angular": "^19.2.6",
+    "@swc/types": "^0.1.21",
     "@types/apollo-upload-client": "^18.0.0",
-    "@types/luxon": "^3.4.2",
-    "@types/node": "^22.13.10",
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^22.14.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
-    "angular-eslint": "^19.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "angular-eslint": "^19.3.0",
     "angular-oauth2-oidc": "^19.0.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-macros": "3.1.0",
     "commit-and-tag-version": "^12.5.0",
     "commitizen": "^4.3.1",
-    "cypress": "^14.2.0",
+    "cypress": "^14.2.1",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.12.24",
-    "esbuild": "^0.25.1",
-    "eslint": "^9.22.0",
+    "esbuild": "^0.25.2",
+    "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.2",
@@ -102,10 +103,10 @@
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.3",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3",
-    "typescript-eslint": "^8.26.1",
+    "typescript-eslint": "^8.29.0",
     "zone.js": "~0.15.0"
   },
   "config": {
