--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ngrx/store": "^19.0.1",
     "@ngrx/store-devtools": "^19.0.1",
     "@sentry/angular": "^9.3.0",
+    "@tailwindcss/postcss": "^4.0.9",
     "animate.css": "^4.1.1",
     "apollo-angular": "^10.0.3",
     "apollo-upload-client": "^18.0.1",
@@ -102,7 +103,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.9",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3",
     "typescript-eslint": "^8.25.0",
